RESOLVED FIXED169136
We should only check for traps that we're able to handle.
https://bugs.webkit.org/show_bug.cgi?id=169136
Summary We should only check for traps that we're able to handle.
Mark Lam
Reported 2017-03-03 09:19:07 PST
The execute methods in interpreter were checking for the existence of any traps (without masking) and only handling a subset of those via a mask. This can result in a failed assertion on debug builds.
Attachments
proposed patch. (5.30 KB, patch)
2017-03-03 09:25 PST, Mark Lam
msaboff: review+
Mark Lam
Comment 1 2017-03-03 09:25:42 PST
Created attachment 303326 [details] proposed patch.
Michael Saboff
Comment 2 2017-03-03 09:32:03 PST
Comment on attachment 303326 [details] proposed patch. r=me
Mark Lam
Comment 3 2017-03-03 09:48:13 PST
Thanks for the review. Landed in r213367: <http://trac.webkit.org/r213367>.
Note You need to log in before you can comment on or make changes to this bug.